--- a/sections/title-slide.qmd
+++ b/sections/title-slide.qmd
@@ -11,11 +11,11 @@
 ::: {.column .information width="68%"}
 
 ::: {.title}
-Biodiversity data: Data Management Plan
+Data Management Plan
 :::
 
 ::: {.subtitle}
-Data Management Plan : a tool for working with data during the all data life cycle
+A tool to plan your own data lifecycle from the beginning
 :::
 
 ::: {.date}
@@ -32,20 +32,14 @@ invisible(Sys.setlocale("LC_TIME", olocale))
 :::: {.columns .authors}
 
 ::: {.column .author width="32%"}
-Yvan Le Bras<br/>
-[{{< fa envelope >}}](mailto:rdev.nc@gmail.com)
-[{{< fa brands github >}}](https://github.com/yvanlebras)
-[{{< fa brands orcid >}}](https://orcid.org/0000-0002-8504-068X)
-[{{< ai google-scholar >}}](https://scholar.google.fr/citations?user=PVBOyvYAAAAJ&hl)
-:::
-
-::: {.column .author width="32%"}
 Olivier Norvez<br/>
 [{{< fa envelope >}}](mailto:olivier.norvez@data-terra.org)
 [{{< fa brands github >}}](https://github.com/onorvez)
 [{{< fa brands orcid >}}](https://orcid.org/0000-0001-8734-3265)
 [{{< ai google-scholar >}}](https://scholar.google.fr/citations?user=0HfITX4AAAAJ&hl)
+:::
 
+::: {.column .author width="32%"}
 :::
 
 ::: {.column .author width="32%"}
@@ -58,18 +52,6 @@ Olivier Norvez<br/>
 :::: {.columns .affiliations}
 
 ::: {.column .affiliation width="32%"}
-Scientific and technical coordinator
-<br/>
-<code>@PNDB</code>
-&nbsp;
-[{{< fa globe >}}](https://www.pndb.fr/)
-<br/>
-<code>@DataTerra</code>
-&nbsp;
-[{{< fa globe >}}](https://www.data-terra.org/)
-:::
-
-::: {.column .affiliation width="32%"}
 Animation coordinator
 <br/>
 <code>@PNDB</code>
@@ -79,6 +61,13 @@ Animation coordinator
 <code>@DataTerra</code>
 &nbsp;
 [{{< fa globe >}}](https://www.data-terra.org/)
+<br/>
+<code>@Theia</code>
+&nbsp;
+[{{< fa globe >}}](https://www.theia-land.fr/)
+:::
+
+::: {.column .affiliation width="32%"}
 :::
 
 ::: {.column .affiliation width="32%"}
